<resources>
    <string name="app_name">UFC_Record_En</string>
    <string name="fighter">Fighter</string>
    <string name="record">Record</string>
    <string name="todo">TODO</string>
    <string name="Ranking">Ranking</string>
    <string name="vs">VS</string>
    <string name="match">Match Name</string>
    <string name="promotion">Promotion</string>
    <string name="heavyweight">HeavyWeight</string>
    <string name="ufc_match">UFC MATCH</string>
    <string name="ultimate_fighting_nchampionship">Ultimate Fighting\nChampionship</string>
    <string name="ufc_apex">UFC Apex</string>
    <string name="main_match">Main match</string>
    <string name="francis_ngannou_n2_round">Francis Ngannou \n2 round</string>
    <string name="heavyweight_nko_punch">HeavyWeight \nKO (punch)</string>
    <string name="francis_ngannou">Francis_Ngannou</string>
    <string name="champion">Champion</string>
    <string name="weight_class">Round\nTime</string>
    <string name="winner">Winner\nMethod</string>
    <string name="loser">Loser\nClass</string>
    <string name="open">Open</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="search">Search</string>
    <string name="game_or_fighter_name">Game or Fighter name</string>
    <string name="fighter_born">Nationality:South Korea</string>
    <string name="fighter_other_names">The Korean Zombie</string>
    <string name="fighter_nationality">South Korean</string>
    <string name="fighter_division">Featherweight</string>
    <string name="fighter_weight">Weight : 145 lb (66 kg)</string>
    <string name="fighter_height">Height : 6 ft 4 in (193 cm)</string>
    <string name="tv_fighter_detail_record_summary">Fighter\'s All Record</string>
    <string name="tv_fighter_record_summary">Total Fighter Record Summary</string>
    <string name="tv_knockout">Win_Knockout</string>
    <string name="tv_w_submission">Win_Submission</string>
    <string name="tv_l_knockout">Lost_Knockout</string>
    <string name="tv_lose_submission">Lose_Submission</string>
    <string name="tv_l_decision">Lost_Decision</string>
    <string name="tv_w_decision">Win_Decision</string>
    <string name="by_knockout">By_Knockout</string>
    <string name="by_submission">By_Submission</string>
    <string name="by_decision">By_Decision</string>
    <string name="et_fighter_name">Fighter Name</string>
    <string name="fighter_name">Fighter Name</string>
    <string name="more_information">… More Information</string>
    <string name="close">Close</string>
    <string name="bantamweight">Bantamweight</string>
    <string name="no">No</string>
    <string name="flyweight">Flyweight</string>
    <string name="men_s_pound_for_pound">Men\'s pound-for-pound</string>
    <string name="lightweight">Lightweight</string>
    <string name="featherweight">Featherweight</string>
    <string name="welterweight">Welterweight</string>
    <string name="middleweight">Middleweight</string>
    <string name="lightheavyweight">Lightheavyweight</string>
    <string name="women_s_pound_for_pound">Women\'s pound-for-pound</string>
    <string name="women_s_strawweight">Women\'s Strawweight</string>
    <string name="women_s_flyweight">Women\'s Flyweight</string>
    <string name="women_s_bantamweight">Women\'s Bantamweight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancelMatch">THIS MATCH HAS BEEN CANCELED</string>
    <string name="men_s_pound_for_pound_list_open">MEN\'S POUND FOR POUND LIST OPEN</string>
    <string name="flyweight_list_open">FLYWEIGHT LIST OPEN</string>
    <string name="bantamweight_list_open">BANTAMWEIGHT LIST OPEN</string>
    <string name="featherweight_list_open">FEATHERWEIGHT LIST OPEN</string>
    <string name="lightweight_list_open">LIGHTWEIGHT LIST OPEN</string>
    <string name="welterweight_list_open">WELTERWEIGHT LIST OPEN</string>
    <string name="middle_weight_list_open">MIDDLE WEIGHT LIST OPEN</string>
    <string name="lightheavy_weight_list_open">LIGHTHEAVY WEIGHT LIST OPEN</string>
    <string name="heavyweight_weight_list_open">HEAVYWEIGHT WEIGHT LIST OPEN</string>
    <string name="women_s_pound_for_pound_list_open">WOMEN\'S POUND FOR POUND LIST OPEN</string>
    <string name="women_s_strawweight_list_open">WOMEN\'S STRAWWEIGHT LIST OPEN</string>
    <string name="women_s_flyweight_list_open">WOMEN\'S FLYWEIGHT LIST OPEN</string>
    <string name="women_s_bantamweight_list_open">WOMEN\'S BANTAMWEIGHT LIST OPEN</string>
    <string name="registered_yet">The Information\nhas not been registered yet.</string>
    <string name="match_day">match day\nevent name</string>
    <string name="opponent">opponent\nmethod</string>
    <string name="round">round\ntime</string>
    <string name="result">result\nrecord</string>
    <string name="total_matches">Total Matches</string>
    <string name="enterprise">Enterprise</string>
    <string name="back">Back</string>
    <string name="etc_result">Etc_Result</string>
</resources>