<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/tab_indicator_text"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:context=".ui.record.DetailRecordActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/ConstraintLayoutResult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_main_image"
                android:layout_width="173dp"
                android:layout_height="250dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ufc260poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:weightSum="4"
                app:layout_constraintBottom_toBottomOf="@+id/iv_main_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_main_image"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_match_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ufc_match"
                    android:textColor="@color/colorNavIcon"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tv_promotion_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="4"
                    android:text="@string/ultimate_fighting_nchampionship"
                    android:textColor="@color/colorNavIcon"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_match_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_match_name" />


                <TextView
                    android:id="@+id/tv_match_Venue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="3"
                    android:text="@string/ufc_apex"
                    android:textColor="@color/colorNavIcon"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_promotion_name" />

                <TextView
                    android:id="@+id/tv_match_City"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="4"
                    android:text="Enterprise, Nevada,\nUnited States"
                    android:textColor="@color/colorNavIcon"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_match_Venue" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- 메치 결과 -->
        <!-- 테스트 테이블 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayoutResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/m_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/m_recycler_view">

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_lay_div_bonus"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="10dp"
            android:background="#A3A3A3"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/tv_match_bonus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ConstraintLayoutResult" />

        <!-- 보너스 -->
        <TextView
            android:id="@+id/tv_match_bonus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"

            android:text="The following fighters received $50,000 bonuses."
            android:textColor="@color/colorNavIcon"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ConstraintLayoutResult" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>